--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "ts-node": "^8.10.1",
+    "typedoc": "^0.17.6",
     "typescript": "^3.9.2",
     "ws": "^7.3.0"
   }
