--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "homepage": "https://github.com/APDF-blockchain/node#readme",
   "dependencies": {
-    "@types/express": "^4.17.6",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.2",
@@ -32,7 +31,11 @@
     "lodash": "^4.17.15",
     "ts-node": "^8.10.1",
     "typedoc": "^0.17.6",
-    "typescript": "^3.9.2",
     "ws": "^7.3.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.6",
+    "@types/ws": "^7.2.4",
+    "typescript": "^3.9.2"
   }
 }
