--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "crypto-js": "^4.0.0",
     "elliptic": "^6.5.2",
     "express": "^4.17.1",
+    "js-sha256": "^0.9.0",
     "lodash": "^4.17.15",
     "ts-node": "^8.10.1",
     "typedoc": "^0.17.6",
