--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "npm run build"
   },
   "engines": {
-    "node": "^=4.3.2"
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
   },
   "repository": {
     "type": "git",
